# sightsentry_pro

./: README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: android-build.yml  build-android.yml
firmware/sightsentry/: platformio.ini  sightsentry.ino
flutter_client/: .gitignore  README.md  pubspec.yaml
flutter_client/android/: key.properties.example
flutter_client/android/app/: build.gradle
flutter_client/android/app/src/main/: AndroidManifest.xml
flutter_client/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
flutter_client/android/app/src/main/kotlin/com/sightsentry/pro/: MainActivity.kt
flutter_client/android/app/src/main/res/xml/: device_filter.xml
flutter_client/lib/: ble_company_ids.dart  connection_status.dart  main.dart  models.dart  oui_vendors.dart  sentry_controller.dart
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  build.gradle  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts  tauri.conf.json
src-tauri/app/: build.gradle  proguard-rules.pro
src-tauri/app/src/main/: AndroidManifest.xml
src-tauri/app/src/main/java/com/sightsentry/pro/: MainActivity.kt
src-tauri/app/src/main/res/layout/: activity_main.xml
src-tauri/app/src/main/res/values/: strings.xml
src-tauri/capabilities/: default.json
src-tauri/src/: cmd.rs  lib.rs  main.rs
web-standalone/: app.js  index.html  styles.css
