[package]
name = "sightsentry-pro"
version = "1.0.0"
description = "WiFi/BLE Signal Sniffing & Positioning System"
authors = ["SightSentry"]
edition = "2021"

[lib]
name = "sightsentry_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "android"] }
tauri-plugin-serial = { version = "2", features = [] }
tauri-plugin-bluetooth = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", features = ["invocation"], default-features = false }
android_logger = "0.14"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
